--- a/config.yaml
+++ b/config.yaml
@@ -2,20 +2,9 @@
 BotToken: "YOUR_BOT_TOKEN"
 Channel: "Channel_ID"
 Exclude: {
-  "ANY!":               true,
-  "CERTIFICATE":        true,
-  "AUXDATA":            true,
-  "BACKUP":             true,
-  "BDJO":               true,
-  "CLIPINF":            true,
-  "JAR":                true,
-  "META":               true,
-  "PLAYLIST":           true,
-  "MovieObject.bdmv":   true,
-  "index.bdmv":         true,
-  "disc.inf":           true,
-  "Thumbs.db":          true,
-  "Rips":               true,
+  "FolderX":            true,
+  "FolderY":            true,
+  "FolderZ":            true
 }
 
 # FTP Settings
